--- a/Memento/Memento.Shared/Memento.Shared.csproj
+++ b/Memento/Memento.Shared/Memento.Shared.csproj
@@ -17,6 +17,8 @@
 		<!-- Microsoft.Extensions -->
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.0" />
+		<!-- Microsoft.JSInterop -->
+		<PackageReference Include="Microsoft.JSInterop" Version="3.1.0" />
 		<!-- System -->
 		<PackageReference Include="System.Text.Json" Version="4.7.0" />
 	</ItemGroup>
