--- a/Memento/Memento.Shared/Memento.Shared.csproj
+++ b/Memento/Memento.Shared/Memento.Shared.csproj
@@ -12,7 +12,11 @@
 		<PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" Version="2.2.0" />
+		<!-- Microsoft.Azure -->
+		<PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.5" />
 		<!-- Microsoft.EntityFrameworkCore -->
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0" />
