--- a/Memento/Memento.Shared/Memento.Shared.csproj
+++ b/Memento/Memento.Shared/Memento.Shared.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
+		<RazorLangVersion>3.0</RazorLangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -9,6 +10,7 @@
 		<PackageReference Include="AutoMapper" Version="9.0.0" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
 		<!-- Microsoft.AspNetCore -->
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
@@ -28,7 +30,10 @@
 		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.0" />
 		<!-- Microsoft.JSInterop -->
 		<PackageReference Include="Microsoft.JSInterop" Version="3.1.0" />
+		<!-- Sotsera -->
+		<PackageReference Include="Sotsera.Blazor.Toaster" Version="3.0.0" />
 		<!-- System -->
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 		<PackageReference Include="System.Text.Json" Version="4.7.0" />
 	</ItemGroup>
 
