--- a/Memento/Memento.Shared/Memento.Shared.csproj
+++ b/Memento/Memento.Shared/Memento.Shared.csproj
@@ -20,6 +20,8 @@
 		<!-- AutoMapper -->
 		<PackageReference Include="AutoMapper" Version="9.0.0" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+		<!-- JetBrains -->
+		<PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
 		<!-- Microsoft.AspNetCore -->
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="3.2.0" />
